my-docs/Muschko/00-exercises/ex_chapter5/chapter5-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: chapter5
