my-docs/Muschko/00-exercises/ex_chapter5/echoserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echoserver
  name: echoserver
  namespace: chapter5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver
  strategy: {}
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.10
        name: echoserver
        resources: {}
