my-docs/Muschko/00-exercises/ex_chapter5/echoserver-nodePort-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoserver
  name: echoserver-nodeport
  namespace: chapter5
spec:
  ports:
  - name: 5005-8080
    port: 5005
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
  type: NodePort
