my-docs/Muschko/00-exercises/ex_chapter5/echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoserver
  name: echoserver
  namespace: chapter5
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
  type: ClusterIP
