my-docs/Muschko/00-exercises/ex_chapter5/corellian-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corellian
  namespace: chapter5
spec:
  rules:
  - host: star-alliance.com
    http:
      paths:
      - backend:
          service:
            name: echoserver-clusterip
            port:
              number: 80
        path: /corellian/api
        pathType: Exact
